ocean: update thermal conf from QPOS30.52-29-9
Signed-off-by: Deivid21 <david.parra.ignacio@gmail.com>

--- a/configs/thermal-engine.conf
+++ b/configs/thermal-engine.conf
@@ -1,8 +1,8 @@
 [FRONT_TEMP]
 algo_type        virtual
 trip_sensor      msm_therm
-set_point        -18000
-set_point_clr    -20000
+thresholds       -18000
+thresholds_clr   -20000
 sensors          msm_therm chg_therm batt_temp
 weights          110       85        110
 offsets          -2000     -2000     -2000
@@ -22,8 +22,8 @@ action_info      1
 [BACK_TEMP]
 algo_type        virtual
 trip_sensor      msm_therm
-set_point        -18000
-set_point_clr    -20000
+thresholds       -18000
+thresholds_clr   -20000
 sensors          msm_therm chg_therm batt_temp
 weights          110       85        110
 offsets          -1000     -1000     -1000
@@ -62,7 +62,7 @@ algo_type        ss
 sampling         1000
 sensor           msm_therm
 device           cpu0
-set_point        44000
+set_point        45000
 set_point_clr    43000
 device_perf_floor 1536000
 
@@ -72,8 +72,8 @@ algo_type        ss
 sampling         1000
 sensor           msm_therm
 device           cpu4
-set_point        42000
-set_point_clr    41000
+set_point        45000
+set_point_clr    43000
 device_perf_floor 1555200
 
 [SS-MSM-CLUSTER12]
@@ -81,8 +81,8 @@ algo_type        ss
 sampling         1000
 sensor           msm_therm
 device           cpu4
-set_point        44000
-set_point_clr    43000
+set_point        48000
+set_point_clr    46000
 device_perf_floor 1401600
 
 [CPU5_HOTPLUG_MONITOR]
